src/scss/index.scss
/* ... */
.home-container, .contact-container {
    justify-content: flex-start;
    gap: 2rem;
    align-items: center;

    & > div {
        width: 75%;
        display: flex;
        flex-direction: column;
        align-items: center;

        p {
            align-self: flex-start;
        }

        ul {
            margin: 0;
        }
        &:last-child {
            padding-bottom: 3rem;
        }
    }

}

#home {
    display: none;
}

#projects {
    display: flex;
}

#contact {
    display: none;
}

.fader {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 60%;
    max-width: 1300px;
    opacity: 0;
    color: black;
    margin-bottom: 2rem;
    // background-color: rgba($highlightFont, 0.45);
    border-radius: 6px;
    box-shadow: 0 2px 8px 0px rgba($primary, 0.95);
    // clip-path: polygon(4% 0, 100% 0, 96% 100%, 0 100%);
    transform: translateX(25vw);
    transition: transform 650ms ease-out, opacity 250ms ease-in, width 400ms ease-in-out;
    
    .project-description {
        align-self: center;
        position: relative;
        width: calc(100% - 5rem);
        margin: 1rem 2.5rem 0;
        height: 5.5rem;
        overflow: hidden;
        background-color: rgba(255,255,255,0);
        outline: 10px solid rgba(255,255,255,0);
        transition: background-color 600ms ease, outline 500ms ease;

        & > div {
            margin-top: 0.25rem;
            margin-bottom: 0.5rem;
        }

        .description {
            // white-space: nowrap;
            overflow: hidden;
            // text-overflow: ellipsis;
            padding-bottom: 1rem;
            position: relative;
            height: 3.7rem;

            &::after {
                position: absolute;
                content: '[Read more...]';
                text-align: left;
                top: 2.5rem;
                padding-top: 0.2em;
                left: 0;
                width: 100%;
                height: 1.5rem;
                font-size: 0.8em;
                background: white;
            }

            & ~ div {
                width: 80%;
                margin: 0 auto;
            }
        }

        .close-description {
            position: absolute;
            display: none;
            justify-content: center;
            align-items: center;
            top: -25px;
            right: 10px;
            color: black;
            cursor: pointer;
        }

        &:hover {
            position: absolute;
            text-align: center;
            padding-top: 1rem;
            width: 100%;
            height: 85%;
            z-index: 50;
            white-space: normal;
            overflow: visible;
            width: calc(100% - 2rem);
            margin: 1.5rem auto;

            & + .image-container {
                margin-top: 5.5rem;
                opacity: 0.05;
                transition: opacity 600ms ease-out;
            }

            h3 {
                font-size: 1.5rem;
            }

            .description {
                text-align: center;
                font-size: 1.2em;
                margin-top: 2rem;
                padding: 0 15%;
                white-space: normal;
                max-height: 70%;
                overflow-y: auto;
                transition: margin-top 600ms ease-in-out;

                &::after {
                    display: none;
                }

                p {
                    margin-top: 0.5rem;
                }

                p:first-child::after {
                    display: none;
                }
            }
        }
    }

    .image-container {
        position: relative;
        background: white;
        box-shadow: 0 0 5px 0 rgba(0,0,0,0.35);
        z-index: 0;

        img {
            height: 100%;
        }

        &::before, &::after {
            position: absolute;
            content: '';
            bottom: 7px;
            width: 45%;
            height: 20px;
            background: rgba(0,0,0,0.3);
            box-shadow: 0 0 5px 8px rgba(0,0,0,0.3);
            z-index: -1;
        }

        &::before {
            left: 10px;
            transform: rotate(-1.5deg);
        }

        &::after {
            right: 10px;
            transform: rotate(1.5deg);
        }

        &:hover {
            &::before, &::after {
                display: none;
            }
        }
    }

    .project-links {
        display: flex;
        justify-content: space-around;
        margin-bottom: 1rem;
        width: 90%;

        a {
            max-width: 45%;
            max-height: 2rem;
            display: flex;
            justify-content: center;
            align-items: center;
            background: rgba(0,0,0,0.05);
            border: 1px solid black;
            padding: 1rem;
            color: black;
            text-align: center;
            text-decoration: none;

            &:hover {
                background: rgba(0,0,0,0.8);
                color: pink;
            }
        }
    }
}

.appear {
    transform: translateX(0);
    opacity: 1;
}

.fullscreen {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    justify-content: center;
    align-items: center;
    background-color: rgba(0,0,0,0.9);
    z-index: 99;

    .image {
        width: 75vw;
        height: 50vw;
        max-width: 75vw;
        max-height: 75vh;
        opacity: 0;
        background-repeat: no-repeat;
        background-size: contain;
        background-position: center;
        transition: opacity 800ms ease;

        &:hover {
            opacity: 1;
        }
    }

    .close-fullscreen {
        position: absolute;
        display: none;
        justify-content: center;
        align-items: center;
        top: 2vh;
        right: 2vh;
        width: 60px;
        height: 60px;
        font-size: 3rem;
        color: white;
        cursor: pointer;
    }
}
/* ... */

